this is 1st version

--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
+index.html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Protfolio</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <p>This is first version</p>
+  <div class="container">
+    <div class="content">
+        <div class="navBar">
+            <div class="logo">
+                <img src="./assets/images/logo2.png" alt="" height="80px" width="300px">
+            </div>
+            <div class="pages">
+            <ul type="none">
+                <li><a href="#">Home</a></li>
+                <li><a href="about.html">About</a> </li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Resume</a> </li>
+
+            </ul>
+        </div>
+    </div>
+    <div class="desc">
+        <div class="introAndBtn">
+    <div class="intro">
+        <p><h1>Hi, I'm Aakanksha Sedhai.</h1> <br/>
+            <h3>I'm currently pursuing BSc (Hons) in Computing in Itahari International College.learning</br>
+             and practically implementing the knowledge regarding building and designing websites.<br/>
+            Currently, I love to work on web application using technologies like HTML, CSS, Javascript.<br/>
+            Using HTML, CSS, JS I designed and develop product page of website and helped with documentaion<br/>
+            of the coursework that is given to us.</h3>
+        </p>
+    </div>
+    <div class="btn">
+        <button>Contact Me!</button>
+    </div>
+    </div>
+    <div class="card">
+        <div class="cardImage">
+            <img src="./assets/images/photo1.jpg" alt="">
+        </div>
+    </div>
+    </div>
+  </div>
+  </div>  
 </body>
 </html>
