--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protfolio</title>
+    <title>Home</title>
     <style>
         *{
             margin: 0px;
@@ -14,7 +14,7 @@
         background-color: rgb(239, 152, 173);
     }
      .navBar{
-        height: 100px;
+        height: 120px;
         background-color: black;
         display: flex;
         justify-content: space-between;
@@ -26,7 +26,7 @@
      .pages ul{
         display: flex;
         gap: 40px;
-        margin-top: 30px;
+        margin-top: 40px;
         justify-content: center;
         align-items: center;
         margin-right: 30px;
