--- a/about.html
+++ b/about.html
@@ -55,6 +55,16 @@
         align-items: center;
         text-shadow: 2px 2px 3px rgb(254, 252, 253);
      }
+     .desc p{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 80px;
+        color: black;
+        font-size: 1.6rem;
+        font-weight: 900px;
+
+     }
     </style>
 </head>
 <body>
@@ -78,17 +88,15 @@
     <h1>About me!</h1>
 </div>
 <div class="desc">
-    <p>
-        Hey there! I’m Aakanksha Sedhai, an 18-year-old student with a passion for all things tech.<br/>
-         I’m currently studying BSc (Hons) in Computing at Itahari International College and learning </br>
-         the ropes of web development.<br><br/>
+    <p>Hey there! I'm Aakanksha Sedhai, an 18-year-old student with a passion for all things tech.<br>
+        I'm currently studying BSc (Hons) in Computing at Itahari International College and learning <br>
+        the ropes of web development.<br><br>
+        I got my start at Arniko Awasiya Secondary School, and now I'm diving deeper into coding with HTML,<br/>
+        CSS, and JavaScript. Right now, I'm working on something exciting—an e-commerce website that sells<br>
+        watches. It's been such a fun and challenging project, and I've learned so much along the way.<br/><br/>
 
-        I got my start at Arniko Awasiya Secondary School, and now I’m diving deeper into coding with HTML,<br/>
-         CSS, and JavaScript. Right now, I’m working on something exciting—an e-commerce website that sells<br/>
-          watches. It’s been such a fun (and challenging!) project, and I’ve learned so much along the way.<br/><br/>
-        
-        Outside of coding, I love exploring new ideas, taking on challenges, and growing as a developer.<br/>
-         If you want to connect, ask me something, or even collaborate on a cool project, I’d love to hear from you!    </p>
+        Outside of coding, I love exploring new ideas, taking on challenges, and growing as a developer.<br>
+        If you want to connect, ask me something, or even collaborate on a cool project, I'd love to hear from you!</p>
 </div>
 </div>
 </div>
