--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a> </li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Resume</a> </li>
+            <li><a href="resume.html">Resume</a> </li>
 
         </ul>
     </div>
