--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="about.html">About</a> </li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Resume</a> </li>
+                <li><a href="resume.html">Resume</a> </li>
 
             </ul>
         </div>
