this is final  version

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
         align-items: center;
         margin-top: 80px;
         color: black;
-        font-size: 1.6rem;
+        font-size: 2.3rem;
         font-weight: 900px;
 
      }
@@ -89,12 +89,12 @@
 </div>
 <div class="desc">
     <p>Hey there! I'm Aakanksha Sedhai, an 18-year-old student with a passion for all things tech.<br>
-        I'm currently studying BSc (Hons) in Computing at Itahari International College and learning <br>
+        I'm currently studying BSc (Hons) Computing at Itahari International College and learning <br>
         the ropes of web development.<br><br>
         I got my start at Arniko Awasiya Secondary School, and now I'm diving deeper into coding with HTML,<br/>
         CSS, and JavaScript. Right now, I'm working on something exciting—an e-commerce website that sells<br>
         watches. It's been such a fun and challenging project, and I've learned so much along the way.<br/><br/>
-
+        <br/>
         Outside of coding, I love exploring new ideas, taking on challenges, and growing as a developer.<br>
         If you want to connect, ask me something, or even collaborate on a cool project, I'd love to hear from you!</p>
 </div>
