--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,13 @@
      .pages ul a:hover{
         background-color: rgb(46, 45, 45);
      }
+     .title h1{
+        margin-top: 20px;
+        margin-left: 40%;
+        font-size: 3rem;
+        text-shadow: 2px 2px 5px white;
+        text-decoration: underline;
+     }
      main{
         display: flex;
         justify-content: space-around;
@@ -133,6 +140,8 @@
         </ul>
     </div>
 </div>
+<div class="title">
+<h1>Get in touch!</h1></div>
 <main>
     <div class="info">
         <div class="address">
