--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </p>
     </div>
     <div class="btn">
-        <button><a href="" >Get in touch!</a></button>
+        <button><a href="contact.html" >Get in touch!</a></button>
     </div>
     </div>
     <div class="card">
